<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bible</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="login_succ">Login successful</string>
    <string name="login_unsucc">Login unsuccessful</string>
    <string name="correct_login">admin</string>
    <string name="home">Home</string>
    <string name="form">Form</string>
    <string name="list">List</string>
    <string name="txt_credentials">admin</string>
    <string name="txt_book">Book</string>
    <string name="txt_chapter">Chapter</string>
    <string name="txt_verse">Verse</string>
    <string name="txt_text">Text</string>
    <string name="btn_create">CREATE</string>
    <string name="btn_delete_all">DELETE ALL</string>
    <string name="added_verse">New verse has been added to the list</string>
    <string name="not_added_verse">All fields need to be filled to add the verse</string>
    <string name="deleted_all">All verses have been removed from the list</string>
    <string name="btn_delete">DELETE</string>
    <string name="list_empty">List is empty</string>
    <string name="dialog_proceed">PROCEED</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_delete_verse">Are you sure you want to delete it?</string>
    <string name="toast_verse_deleted">Verse has been deleted</string>
    <string name="toast_cancelled">Operation cancelled</string>
    <string name="toast_data_deleted">All data has been deleted</string>
    <string name="dialog_delete_data">Are you sure you want to delete all data?</string>
    <string name="toast_new_verse">A new verse has been added</string>
    <string name="toast_fill_fields">All fields must be filled</string>
    <string name="txt_welcome">WELCOME, SINNER</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="logout_menu_item">Logout</string>
    <string name="settings_item_menu">Settings</string>
</resources>