<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FormFragment">

    <EditText
        android:id="@+id/txtBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/txt_book"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/txt_chapter"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBook" />

    <EditText
        android:id="@+id/txtVerse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/txt_verse"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChapter" />

    <EditText
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/txt_text"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVerse" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="161dp"
        android:text="@string/btn_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtText" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="161dp"
        android:text="@string/btn_delete_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

    <TextView
        android:id="@+id/lblCreateResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="177dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteAll" />

</androidx.constraintlayout.widget.ConstraintLayout>